--- a/main.html
+++ b/main.html
@@ -287,23 +287,23 @@
   </div>
 
   <div class="button-container">
-    <h3><span class="emojis">🤖✨</span>CRIMINAL XMD SESSION <span class="emojis">✨🤖</span></h3>
+    <h3><span class="emojis">🤖✨</span>LADY-BELLA SESSION 2<span class="emojis">✨🤖</span></h3>
     <div class="social-bar">
-      <a href="https://wa.me/254759626063" class="fa-brands fa-whatsapp" target="_blank" title="WhatsApp"></a>
+      <a href="https://wa.me/254794146821" class="fa-brands fa-whatsapp" target="_blank" title="WhatsApp"></a>
       <a href="https://www.youtube.com/" class="fa-brands fa-youtube" target="_blank" title="YouTube"></a>
       <a href="https://facebook.com/" class="fa-brands fa-facebook" target="_blank" title="Facebook"></a>
     </div>
 
     <a href="/qr" class="button" target="_blank"><span> <i class="fa-solid fa-qrcode"></i> QR-CODE</span></a>
     <a href="/pair" class="button" target="_blank"><span> <i class="fa-solid fa-link"></i> PAIRING-CODE</span></a>
-    <a href="https://github.com/CHARLESX001/CRIMINAL-XMD/fork" class="button" target="_blank"><span> <i class="fa-brands fa-github"></i> FORK CRIMINAL XMD</span></a>
-    <a href="https://whatsapp.com/channel/0029Vao2hgeChq6HJ5bmlZ3K" class="button whatsapp" target="_blank"><span><i class="fa-brands fa-whatsapp"></i> WhatsApp</span></a>
+    <a href="https://github.com/SNOWBIRD0074/Lady-bella-v2/fork" class="button" target="_blank"><span> <i class="fa-brands fa-github"></i> FORK LADY-BELLA</span></a>
+    <a href="https://whatsapp.com/channel/0029Vb5nSebFy722d2NEeU3C" class="button whatsapp" target="_blank"><span><i class="fa-brands fa-whatsapp"></i> WhatsApp</span></a>
     <p style="margin: 13px 0 4px 0;">WANT TO TALK TO DEVELOPER? <span class="emojis">👇</span></p>
-    <a href="https://wa.me/254759626063" class="button whatsapp" target="_blank"><span><i class="fa-brands fa-whatsapp"></i> ERROR</span></a>
+    <a href="https://wa.me/254794146821" class="button whatsapp" target="_blank"><span><i class="fa-brands fa-whatsapp"></i> ERROR</span></a>
   </div>
 
   <footer>
-    <span class="emojis">🌟</span> CRIMINAL XMD &copy; <span id="currentYear"></span> <span class="emojis">🤖</span>
+    <span class="emojis">🌟</span> LADY-BELLA &copy; <span id="currentYear"></span> <span class="emojis">🤖</span>
   </footer>
 
   <script>
