--- a/pair.html
+++ b/pair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LADY BELLA-V2 PAIR CODE</title>
+  <title>CRIMINAL XMD PAIR CODE</title>
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <style>
@@ -23,7 +23,7 @@
       font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
       color: #fff;
       /* Set new background image */
-      background: url("https://files.catbox.moe/j9eknp.jpg") no-repeat center center fixed;
+      background: url("https://files.catbox.moe/o4of0n.jpg") no-repeat center center fixed;
       background-size: cover;
       display: flex;
       flex-direction: column;
@@ -265,19 +265,19 @@
   </div>
 
   <div class="glass-box">
-    <div class="glow-title"><span>🤖</span> LADY-BELLA V2 PAIR <span>✨</span></div>
+    <div class="glow-title"><span>🤖</span> CRIMINAL XMD PAIR <span>✨</span></div>
     <div class="box-content">
       <i class="fa fa-user"></i>
       <h6>⚙️ Enter your number with country code. ♻️</h6>
       <div class="input-container">
-        <input placeholder="254099777544433" type="number" id="number" name="">
+        <input placeholder="254759***63" type="number" id="number" name="">
         <button id="submit">ENTER</button>
       </div>
       <div class="centered-text" id="waiting-message" style="display: none;">in process...</div>
       <main id="pair"></main>
     </div>
   </div>
-  <div class="glowing-text">Powered By cyberdev 🟢</div>
+  <div class="glowing-text">Powered By ®Charles 🟢</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
   <script>
